<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            android:elevation="1dp"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            android:background="@color/primaryColor">

        </androidx.appcompat.widget.Toolbar>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">

            <com.smarteist.autoimageslider.SliderView
                android:id="@+id/imageSlider"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                app:sliderAnimationDuration="600"
                app:sliderAutoCycleDirection="back_and_forth"
                app:sliderAutoCycleEnabled="true"
                app:sliderCircularHandlerEnabled="true"
                app:sliderIndicatorAnimationDuration="600"
                app:sliderIndicatorGravity="center_horizontal|bottom|end"
                app:sliderIndicatorMargin="15dp"
                app:sliderIndicatorOrientation="horizontal"
                app:sliderIndicatorPadding="3dp"
                app:sliderIndicatorRadius="2dp"
                app:sliderIndicatorSelectedColor="@color/primaryDarkColor"
                app:sliderIndicatorUnselectedColor="@color/primaryTextColor"
                app:sliderScrollTimeInSec="1"
                app:sliderStartAutoCycle="true" />

        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Kategori"
                android:textSize="12sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="15dp">



                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@mipmap/buku_peralatan_tulis"
                        android:background="@drawable/bg_item_kategori"
                        android:padding="7dp"/>

                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/buku_peralatan"
                        android:textSize="12sp"
                        android:textAlignment="center"
                        />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    >

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@mipmap/elektronik"
                        android:background="@drawable/bg_item_kategori"
                        android:padding="7dp"/>

                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/elektronik"
                        android:textSize="12sp"
                        android:textAlignment="center"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@mipmap/aksesoris_elektronik"
                        android:background="@drawable/bg_item_kategori"
                        android:padding="7dp"/>

                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/aksesoris_elektronik"
                        android:textAlignment="center"
                        android:textSize="12sp"/>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="20dp">



                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@mipmap/mobil"
                        android:background="@drawable/bg_item_kategori"
                        android:padding="7dp"/>

                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/mobil"
                        android:textSize="12sp"
                        android:textAlignment="center"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    >

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@mipmap/properti"
                        android:background="@drawable/bg_item_kategori"
                        android:padding="7dp"/>

                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/properti"
                        android:textSize="12sp"
                        android:textAlignment="center"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@mipmap/motor"
                        android:background="@drawable/bg_item_kategori"
                        android:padding="7dp"/>

                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/motor"
                        android:textSize="12sp"
                        android:textAlignment="center"/>

                </LinearLayout>









            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="20dp">




                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@mipmap/makanan_minuman"
                        android:background="@drawable/bg_item_kategori"
                        android:padding="7dp"/>

                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/makanan_minuman"
                        android:textSize="12sp"
                        android:textAlignment="center"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    >

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@mipmap/mainan"
                        android:background="@drawable/bg_item_kategori"
                        android:padding="7dp"/>

                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/mainan"
                        android:textSize="12sp"
                        android:textAlignment="center"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@mipmap/bayi"
                        android:background="@drawable/bg_item_kategori"
                        android:padding="7dp"/>

                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/bayi"
                        android:textSize="12sp"
                        android:textAlignment="center"/>

                </LinearLayout>

            </LinearLayout>


            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                android:layout_gravity="center_horizontal">

                <com.google.android.gms.ads.AdView
                    xmlns:ads="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/adView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    ads:adSize="BANNER"
                    ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
                </com.google.android.gms.ads.AdView>



            </androidx.cardview.widget.CardView>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</FrameLayout>